--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -5,16 +5,47 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tv_message"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_time"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:fontFamily="roboto_thin"
         android:gravity="center_vertical"
         android:padding="8dp"
-        android:paddingEnd="16dp"
+        android:paddingEnd="8dp"
         android:paddingStart="16dp"
-        android:text="Some item name"
+        android:text="14:02"
         android:textSize="16sp"
-        android:typeface="normal" />
+        android:typeface="normal"
+        android:textColor="@android:color/holo_blue_light"/>
+
+    <TextView
+        android:id="@+id/tv_nick"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:fontFamily="roboto_thin"
+        android:gravity="center_vertical"
+        android:padding="8dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:text="very long nick"
+        android:textSize="16sp"
+        android:typeface="normal"
+        android:textColor="@android:color/holo_orange_dark"/>
+
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8"
+        android:fontFamily="roboto_thin"
+        android:gravity="center_vertical"
+        android:padding="8dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="8dp"
+        android:text="Content could be ver long xd okokok test te te t e te t e t e tetestttt"
+        android:textSize="16sp"
+        android:typeface="normal"
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
